remove in_kpc, fix unit tests

--- a/test_autolens/config/general.yaml
+++ b/test_autolens/config/general.yaml
@@ -10,9 +10,9 @@ grid:
 hpc:
   hpc_mode: false
   iterations_per_update: 5000
-hyper:
-  hyper_minimum_percent: 0.01
-  hyper_noise_limit: 100000000.0
+adapt:
+  adapt_minimum_percent: 0.01
+  adapt_noise_limit: 100000000.0
   stochastic_outputs: false
 inversion:
   check_reconstruction: false       # If True, the inversion's reconstruction is checked to ensure the solution of a meshs's mapper is not an invalid solution where the values are all the same.
