--- a/test_autolens/config/notation.yaml
+++ b/test_autolens/config/notation.yaml
@@ -1,6 +1,7 @@
 label:
   label:
     alpha: \alpha
+    angle_binary: \theta
     beta: \beta
     break_radius: \theta_{\rm B}
     centre_0: y
@@ -25,7 +26,9 @@ label:
     intensity: I_{\rm b}
     kappa: \kappa
     kappa_s: \kappa_{\rm s}
+    mass: M
     mass_at_200: M_{\rm 200}
+    mass_ratio: M_{\rm ratio}
     mass_to_light_gradient: \Gamma
     mass_to_light_ratio: \Psi
     noise_factor: \omega_{\rm 1}
@@ -41,6 +44,7 @@ label:
     redshift_source: z_{\rm src}
     scale_radius: R_{\rm s}
     scatter: \sigma
+    separation: s
     sersic_index: n
     shape_0: y_{\rm pix}
     shape_1: x_{\rm pix}
