--- a/test_autolens/config/general.yaml
+++ b/test_autolens/config/general.yaml
@@ -40,7 +40,7 @@ profiling:
   repeats: 1
 test:
   check_figure_of_merit_sanity: false
-  bypass_figure_of_merit_sanity: false
+  bypass_figure_of_merit_sanity: true
   check_preloads: false
   exception_override: false
   preloads_check_threshold: 1.0     # If the figure of merit of a fit with and without preloads is greater than this threshold, the check preload test fails and an exception raised for a model-fit. 
