cache image_galaxy_dict in result for faster search chaining adapt dataset passing

--- a/test_autolens/config/notation.yaml
+++ b/test_autolens/config/notation.yaml
@@ -15,8 +15,8 @@ label:
     einstein_radius: \theta_{\rm Ein}
     ell_comps_0: \epsilon_{\rm 1}
     ell_comps_1: \epsilon_{\rm 2}
-    ell_comps_multipole_0: M_{\rm 1}
-    ell_comps_multipole_1: M_{\rm 2}
+    multipole_comps_0: M_{\rm 1}
+    multipole_comps_1: M_{\rm 2}
     flux: F
     gamma: \gamma
     gamma_1: \gamma
