--- a/test_autolens/config/visualize.yaml
+++ b/test_autolens/config/visualize.yaml
@@ -13,7 +13,7 @@ include:
     grid: true
     inversion_grid: true
     light_profile_centres: true
-    mapper_image_plane_mesh_grid: true
+    mapper_image_plane_mesh_grid: false
     mapper_source_plane_mesh_grid: true
     mask: true
     mass_profile_centres: true
