--- a/autolens/config/visualize/plots.yaml
+++ b/autolens/config/visualize/plots.yaml
@@ -31,12 +31,13 @@
     all_at_end_fits: true                    # Plot all individual plots listed below as .fits (even if False)?
     all_at_end_pdf: false                    # Plot all individual plots listed below as publication-quality .pdf (even if False)?
     subplot_plane_images: false              # Plot subplot of the image of each plane in the tracer?
-    image: false
-    source_plane_image: false
-    convergence: false
-    potential: false
-    deflections: false
-    magnification: false
+    image: false                             # Plot image of the tracer (e.g. lens and lensed source in the image-plane)?
+    source_plane_image: false                # Plot image of the tracer's source-plane?
+    lens_image: false                        # Plot image of the foreground lens galaxy (log10)?
+    convergence: false                       # Plot image of the tracer's convergence (log10)?
+    potential: false                         # Plot image of the tracer's potential (log10)?
+    deflections: false                       # Plot images of the tracer's y and x deflections?
+    magnification: false                     # Plot image of the tracer's magnification?
   galaxies:                                  # Settings for plots of galaxies (e.g GalaxyPlotter).
     image: false
     convergence: false
