--- a/test_autolens/config/priors/stellar_mass_profiles.yaml
+++ b/test_autolens/config/priors/stellar_mass_profiles.yaml
@@ -355,7 +355,7 @@ Sersic:
     width_modifier:
       type: Absolute
       value: 1.5
-SersicRadialGradient:
+SersicGradient:
   centre_0:
     gaussian_limits:
       lower: -inf
@@ -454,7 +454,7 @@ SersicRadialGradient:
     width_modifier:
       type: Absolute
       value: 1.5
-SersicRadialGradientSph:
+SersicGradientSph:
   centre_0:
     gaussian_limits:
       lower: -inf
