--- a/test_autolens/config/notation.yaml
+++ b/test_autolens/config/notation.yaml
@@ -32,6 +32,8 @@ label:
     mass_ratio: M_{\rm ratio}
     mass_to_light_gradient: \Gamma
     mass_to_light_ratio: \Psi
+    mass_to_light_ratio_base: \Psi_{\rm base}
+    mass_to_light_reference_radius: R_{\rm ref}
     noise_factor: \omega_{\rm 1}
     noise_power: \omega{\rm 2}
     noise_scale: \sigma_{\rm 1}
