--- a/test_autolens/config/priors/stellar_mass_profiles.yaml
+++ b/test_autolens/config/priors/stellar_mass_profiles.yaml
@@ -47,8 +47,8 @@ DevVaucouleurs:
       value: 0.2
   ell_comps_1:
     gaussian_limits:
-      lower: '-1.0'
-      upper: '1.0'
+      lower: -1.0
+      upper: 1.0
     lower_limit: -1.0
     mean: 0.0
     sigma: 0.3
@@ -181,8 +181,8 @@ Exponential:
       value: 0.2
   ell_comps_1:
     gaussian_limits:
-      lower: '-1.0'
-      upper: '1.0'
+      lower: -1.0
+      upper: 1.0
     lower_limit: -1.0
     mean: 0.0
     sigma: 0.3
@@ -315,8 +315,8 @@ Sersic:
       value: 0.2
   ell_comps_1:
     gaussian_limits:
-      lower: '-1.0'
-      upper: '1.0'
+      lower: -1.0
+      upper: 1.0
     lower_limit: -1.0
     mean: 0.0
     sigma: 0.3
@@ -404,8 +404,8 @@ SersicGradient:
       value: 0.2
   ell_comps_1:
     gaussian_limits:
-      lower: '-1.0'
-      upper: '1.0'
+      lower: -1.0
+      upper: 1.0
     lower_limit: -1.0
     mean: 0.0
     sigma: 0.3
