--- a/test_autolens/config/priors/total_mass_profiles.yaml
+++ b/test_autolens/config/priors/total_mass_profiles.yaml
@@ -47,8 +47,8 @@ Isothermal:
       value: 0.2
   ell_comps_1:
     gaussian_limits:
-      lower: '-1.0'
-      upper: '1.0'
+      lower: -1.0
+      upper: 1.0
     lower_limit: -1.0
     mean: 0.0
     sigma: 0.3
@@ -116,8 +116,8 @@ IsothermalCore:
       value: 0.2
   ell_comps_1:
     gaussian_limits:
-      lower: '-1.0'
-      upper: '1.0'
+      lower: -1.0
+      upper: 1.0
     lower_limit: -1.0
     mean: 0.0
     sigma: 0.3
@@ -290,8 +290,8 @@ PowerLaw:
       value: 0.2
   ell_comps_1:
     gaussian_limits:
-      lower: '-1.0'
-      upper: '1.0'
+      lower: -1.0
+      upper: 1.0
     lower_limit: -1.0
     mean: 0.0
     sigma: 0.3
@@ -369,8 +369,8 @@ PowerLawCore:
       value: 0.2
   ell_comps_1:
     gaussian_limits:
-      lower: '-1.0'
-      upper: '1.0'
+      lower: -1.0
+      upper: 1.0
     lower_limit: -1.0
     mean: 0.0
     sigma: 0.3
