--- a/test_autolens/config/priors/light_profiles.yaml
+++ b/test_autolens/config/priors/light_profiles.yaml
@@ -33,8 +33,8 @@ EllLightProfile:
       value: 0.2
   ell_comps_1:
     gaussian_limits:
-      lower: '-1.0'
-      upper: '1.0'
+      lower: -1.0
+      upper: 1.0
     lower_limit: -1.0
     mean: 0.0
     sigma: 0.3
@@ -97,8 +97,8 @@ Exponential:
       value: 0.2
   ell_comps_1:
     gaussian_limits:
-      lower: '-1.0'
-      upper: '1.0'
+      lower: -1.0
+      upper: 1.0
     lower_limit: -1.0
     mean: 0.0
     sigma: 0.3
@@ -155,8 +155,8 @@ Gaussian:
       value: 0.2
   ell_comps_1:
     gaussian_limits:
-      lower: '-1.0'
-      upper: '1.0'
+      lower: -1.0
+      upper: 1.0
     lower_limit: -1.0
     mean: 0.0
     sigma: 0.3
@@ -234,8 +234,8 @@ Sersic:
       value: 0.2
   ell_comps_1:
     gaussian_limits:
-      lower: '-1.0'
-      upper: '1.0'
+      lower: -1.0
+      upper: 1.0
     lower_limit: -1.0
     mean: 0.0
     sigma: 0.3
