--- a/test_autolens/config/visualize.yaml
+++ b/test_autolens/config/visualize.yaml
@@ -76,6 +76,7 @@ plots:
     subplot_fit: true
     subplots_of_planes: false
   fit_imaging:
+    fits_fit: true                          # Output a .fits file containing the fit model data, residual map, normalized residual map and chi-squared?
     fits_model_galaxy_images : true         # Output a .fits file containing the model images of every galaxy?
   fit_interferometer:
     subplot_fit_real_space: true
