--- a/test_autolens/config/visualize.yaml
+++ b/test_autolens/config/visualize.yaml
@@ -75,12 +75,13 @@ plots:
   fit:
     subplot_fit: true
     subplots_of_planes: false
-  fit_imaging:
     fits_fit: true                          # Output a .fits file containing the fit model data, residual map, normalized residual map and chi-squared?
     fits_model_galaxy_images : true         # Output a .fits file containing the model images of every galaxy?
+  fit_imaging: {}
   fit_interferometer:
     subplot_fit_real_space: true
     subplot_fit_dirty_images: true
+    fits_dirty_images: true                 # output dirty_images.fits showing the dirty image, noise-map, model-data, resiual-map, normalized residual map and chi-squared map?
   fit_point_dataset: {}
   fit_quantity:
     subplot_fit: true
