--- a/pyproject.toml
+++ b/pyproject.toml
@@ -26,6 +26,10 @@ classifiers = [
   "Programming Language :: Python :: 3.12"
 ]
 keywords = ["cli"]
+dependencies = [
+    "autogalaxy",
+    "nautilus-sampler==1.0.4"
+]
 
 [project.urls]
 Homepage = "https://github.com/Jammy2211/PyAutoLens"
