Revert "Feature/jax point source"

--- a/test_autolens/config/notation.yaml
+++ b/test_autolens/config/notation.yaml
@@ -62,6 +62,7 @@ label:
     weight_power: W_{\rm p}
   superscript:
     ExternalShear: ext
+    InputDeflections: defl
     Pixelization: pix
     Point: point
     Redshift: ''
